--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+<a href="https://mrbenbrittonhvhs.github.io/13COMPProjectPractice/">Link to this GitHub Page</a>
 <a href="about.html">Read me first</a>
   
 All of the output from firebase goes to the console, open it up now (ctrl - shift - i)
