--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>13COMP Guess the number game test</title>
 
   <!-- firebase start ****************************************-->
   <!-- Firebase App (core Firebase SDK) is always required & must be listed 1st -->
@@ -23,9 +22,8 @@
 
 <body>
 <a href="https://mrbenbrittonhvhs.github.io/13COMPProjectPractice/">Link to this GitHub Page</a>
-<a href="about.html">Read me first</a>
   
-All of the output from firebase goes to the console, open it up now (ctrl - shift - i)
+Guess the number: Starting with the basic IO
   
   <h2>Hello world - a minimal write</h2>
   <p>This button overwrites your entire database with the key/value pair Message : "Hello World" using the <a href="https://firebase.google.com/docs/database/web/read-and-write#basic_write">set()</a> operation. Look in firebase to see the effect.</p>
