SCRIPT.JS FIXED

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 <a href="https://mrbenbrittonhvhs.github.io/13COMPProjectPractice/">Link to this GitHub Page</a>
   
-Guess the number: Starting with the basic IO
+<H2>Guess the number: Starting with the basic IO</H2>
   
   <h2>Hello world - a minimal write</h2>
   <p>This button overwrites your entire database with the key/value pair Message : "Hello World" using the <a href="https://firebase.google.com/docs/database/web/read-and-write#basic_write">set()</a> operation. Look in firebase to see the effect.</p>
