--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script> 
   <!-- firebase end ******************************************-->
+  <script src="page.js"></script> 
   <script src="fb_setup.js"></script> 
   <script src="fb_io.js"></script> 
   <script src="script.js"></script> 
@@ -33,6 +34,9 @@
   <button onclick="fb_helloWorld()">Hello world</button>
   <button onclick="fb_goodbye()">goodbye</button>
 
+
+  <button onclick="fb_checkUser()">checkUser</button>
+<div id="gameDisplay">Loading games...</div>
 
 <!--
   <h2>Hello world - a minimal write</h2>
