--- a/index.html
+++ b/index.html
@@ -27,12 +27,8 @@
   
 <H2>Guess the number: Starting with the basic IO</H2>
   
-  <h2>Hello world - a minimal write</h2>
-  <p>This button overwrites your entire database with the key/value pair Message : "Hello World" using the <a href="https://firebase.google.com/docs/database/web/read-and-write#basic_write">set()</a> operation. Look in firebase to see the effect.</p>
-  <p> Task 1: change the message in fb_helloWorld() to "Kia ora te ao"</p>
-  <p> Task 2: create another button that changes the message to "Goodbye/ka kite āno"</p>
-  <button onclick="fb_helloWorld()">Hello world</button>
-  <button onclick="fb_goodbye()">goodbye</button>
+  <h2>Testing the owner can play</h2>
+
 
 
   <button onclick="fb_checkUser()">checkUser</button>
