--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- firebase end ******************************************-->
   <script src="page.js"></script> 
   <script src="fb_setup.js"></script> 
-  <script src="fb_io.js"></script> 
+  <script src="GTN.js"></script> 
   <script src="script.js"></script> 
 
 </head>
