--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script> 
   <!-- firebase end ******************************************-->
-  <script src="page.js"></script> 
+  <script src="GTNpage.js"></script> 
   <script src="fb_setup.js"></script> 
   <script src="GTN.js"></script> 
   <script src="script.js"></script> 
