--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
 <H2>Guess the number: Starting with the basic IO</H2>
   
-  <h2>Testing the owner can play</h2>
+  <h2>Turn based</h2>
 
 <div id="gameDisplay">Loading games...</div>
 
