--- a/GTN.html
+++ b/GTN.html
@@ -14,8 +14,10 @@
   <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script> 
   <!-- firebase end ******************************************-->
+  <script src="GTNpage.js"></script> 
   <script src="fb_setup.js"></script> 
-  <script src="index.js"></script> 
+  <script src="GTN.js"></script> 
+  <script src="script.js"></script> 
 
 </head>
 
