--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
 </head>
 
 <body>
-<a href="https://mrbenbrittonhvhs.github.io/13COMPProjectPractice/">Link to this GitHub Page</a><br>
-<a href="https://console.firebase.google.com/project/fir-rebuild-b3c92/database/fir-rebuild-b3c92-default-rtdb/data">The Firebase database</a>
-  
-<H2>Guess the number: Starting with the basic IO</H2>
-  
-  <h2>Turn based</h2>
-
-<div id="gameDisplay">Loading games...</div>
+<h1> Welcome to Mr Britton's game site</h1>>
 
 </body>
 
