--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,9 @@
 
 <body>
 <h1> Welcome to Mr Britton's game site</h1>
-Checking to see if you are registered...
+Please fill in this form and we'll get you started!
+
+<input
 
 </body>
 
