--- a/signup.html
+++ b/signup.html
@@ -22,8 +22,18 @@
 <body>
 <h1> Welcome to Mr Britton's game site</h1>
 Please fill in this form and we'll get you started!
-
-<input
+<p>
+    What shall we call you?
+</p>
+<input type=text id=displayName><input>
+<p>
+    how old are you?
+</p>
+<input type=text id=displayName><input>
+<p>
+    Gender?
+</p>
+<input type=drop id=displayName><input>
 
 </body>
 
