--- a/signup.html
+++ b/signup.html
@@ -29,12 +29,16 @@ Please fill in this form and we'll get you started!
 <p>
     how old are you?
 </p>
-<input type=text id=displayName><input>
+<input type=number id=age><input>
 <p>
     Gender?
 </p>
-<input type=drop id=displayName><input>
-
+<select name="cars" id="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="mercedes">Mercedes</option>
+    <option value="audi">Audi</option>
+  </select>
 </body>
 
 </html>
