--- a/signUp.html
+++ b/signUp.html
@@ -15,7 +15,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script> 
   <!-- firebase end ******************************************-->
   <script src="fb_setup.js"></script> 
-  <script src="signup.js"></script> 
+  <script src="signup.js"></script>
 
 </head>
 
@@ -25,19 +25,20 @@ Please fill in this form and we'll get you started!
 <p>
     What shall we call you?
 </p>
-<input type=text id=displayName><input>
+<input type=text id=displayName>
 <p>
     How old are you?
 </p>
-<input type=number id=age><input>
+<input type=number id=age>
 <p>
     Gender?
 </p>
 <select id="gender">
-    <option value="yes">Volvo</option>
-    <option value="no">Saab</option>
-    <option value="maybe">Mercedes</option>
+    <option value="yes">yes</option>
+    <option value="no">no</option>
+    <option value="maybe">maybe</option>
 </select>
+<br>
 <button onClick="signup_register()">Register!</button>
 
 </body>
