--- a/signUp.html
+++ b/signUp.html
@@ -25,11 +25,11 @@ Please fill in this form and we'll get you started!
 <p>
     What shall we call you?
 </p>
-<input type=text id=displayName>
+<input type=text id=displayName value="Your name here">
 <p>
     How old are you?
 </p>
-<input type=number id=age>
+<input type=number id=age value="99">
 <p>
     Gender?
 </p>
