--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 <body>
 <h1> Welcome to Mr Britton's game site</h1>
+<div id="WelcomeMessage">
 Checking to see if you are registered...
+</div>
 
 </body>
 
