--- a/GTN.html
+++ b/GTN.html
@@ -25,7 +25,7 @@
 <a href="https://mrbenbrittonhvhs.github.io/13COMPProjectPractice/">Link to this GitHub Page</a><br>
 <a href="https://console.firebase.google.com/project/fir-rebuild-b3c92/database/fir-rebuild-b3c92-default-rtdb/data">The Firebase database</a>
   
-<H2>Guess the number: Starting with the basic IO</H2>
+<H2>Guess the number:</H2>
   
   <h2>Turn based</h2>
 
