--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <a href="admin.html">admin</a>
 <h1> Welcome to Mr Britton's game site</h1>
 <div id="WelcomeMessage">
 Checking to see if you are registered...
