--- a/admin.html
+++ b/admin.html
@@ -30,6 +30,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
     <!-- Your modules ******************************************-->
+    <script defer src="fb_setup.js"></script>
     <script defer src="ad_manager.js"></script>
     <script defer src=""></script>
 </head>
