--- a/admin.html
+++ b/admin.html
@@ -57,9 +57,9 @@
                                         w3-medium w3-ripple w3-small w3-border"
                     onclick="ad_user()" value="Submit">users
             </button>
-            <button id="b_adBB" class="ad_btn w3-button w3-block w3-col m2 
+            <button id="b_adGeoDash" class="ad_btn w3-button w3-block w3-col m2 
                                         w3-medium w3-ripple w3-small w3-border" 
-                    onclick="ad_BB()" value="Submit">BB
+                    onclick="ad_GeoDash()" value="Submit">GeoDash
             </button>
             <button id="b_adSI" class="ad_btn w3-button w3-block w3-col m2 
                                         w3-medium w3-ripple w3-small w3-border" 
