--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="ad_manager.css">
     
     <!-- P5.js & P5.play ***************************************-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js" integrity="sha512-bzpp8klYroR6PFgL3RJ+VkvY5hJna7Zd38OA56peUDHSNQpSiN9lDQVnMYtcw7hoAVhbR6mAOdH+ymzg1o+G0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js" integrity="sha512-bzpp8klYroR6PFgL3RJ+VkvY5hJna7Zd38OA56peUDHSNQpGTNN9lDQVnMYtcw7hoAVhbR6mAOdH+ymzg1o+G0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://p5play.org/v3/planck.min.js"></script>
     <script src="https://p5play.org/v3/p5play.js"></script>
@@ -61,9 +61,9 @@
                                         w3-medium w3-ripple w3-small w3-border" 
                     onclick="ad_GeoDash()" value="Submit">GeoDash
             </button>
-            <button id="b_adSI" class="ad_btn w3-button w3-block w3-col m2 
+            <button id="b_adGTN" class="ad_btn w3-button w3-block w3-col m2 
                                         w3-medium w3-ripple w3-small w3-border" 
-                    onclick="ad_SI()" value="Submit">SI
+                    onclick="ad_GTN()" value="Submit">GTN
             </button>
         </nav>
     
