--- a/GTN.html
+++ b/GTN.html
@@ -29,6 +29,7 @@
   <h2>Turn based</h2>
 
 <div id="gameDisplay">Loading games...</div>
+<div id="scoresDisplay">Loading scores...</div>
 
 </body>
 
