--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <a href="admin.html">admin</a>
 <h1> Welcome to Mr Britton's game site</h1>
+Testing commit speed
 <div id="WelcomeMessage">
 Checking to see if you are registered...
 </div>
