next commit edit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="admin.html">admin</a>
 <h1> Welcome to Mr Britton's game site</h1>
 Testing commit speed
+second commit test edit.
 <div id="WelcomeMessage">
 Checking to see if you are registered...
 </div>
