--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 <body>
     <a href="admin.html">admin</a>
 <h1> Welcome to Mr Britton's game site</h1>
-Testing commit speed
-second commit test edit.
+Testing commit speed<br>
+second commit test edit.<br>
+And another, testing auto commits
 <div id="WelcomeMessage">
 Checking to see if you are registered...
 </div>
