--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <h1> Welcome to Mr Britton's game site</h1>
 Testing commit speed<br>
 second commit test edit.<br>
-And another, testing auto commits
+And another, testing auto commits<br>
+Yet another test
 <div id="WelcomeMessage">
 Checking to see if you are registered...
 </div>
