--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
     <a href="admin.html">admin</a>
+    <button onClick="index_makeMeAdmin()">Make me admin</button>
 <h1> Welcome to Mr Britton's game site</h1>
 Testing commit speed<br>
 second commit test edit.<br>
