--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 </head>
 
 <body>
-    <a href="admin.html">admin</a>
+    <a href="admin.html">admin</a><br>
     <button onClick="index_makeMeAdmin()">Make me admin</button>
+    <button onClick="index_removeAdmin()">Make me not admin</button>
 <h1> Welcome to Mr Britton's game site</h1>
 Testing commit speed<br>
 second commit test edit.<br>
