--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <a href="admin.html">admin</a><br>
+  <div id="admin"></div>
     <button onClick="index_makeMeAdmin()">Make me admin</button>
     <button onClick="index_removeAdmin()">Make me not admin</button>
 <h1> Welcome to Mr Britton's game site</h1>
