--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
 <body>
   <div id="admin"></div>
-    <button onClick="index_makeMeAdmin()">Make me admin</button>
-    <button onClick="index_removeAdmin()">Make me not admin</button>
-<h1> Welcome to Mr Britton's game site</h1>
+ <h1> Welcome to Mr Britton's game site</h1>
 Testing commit speed<br>
 second commit test edit.<br>
 And another, testing auto commits<br>
@@ -31,6 +29,55 @@ Yet another test
 <div id="WelcomeMessage">
 Checking to see if you are registered...
 </div>
+<p></p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+Secret buttons, testing only<br>
+<button onClick="index_makeMeAdmin()">Make me admin</button>
+<button onClick="index_removeAdmin()">Make me not admin</button>
+
 
 </body>
 
