--- a/admin.html
+++ b/admin.html
@@ -53,7 +53,11 @@
     
     <main class="w3-container" style="overflow-x: scroll;">      
         <nav id="n_admin" class="w3-bar stickyNav">
-            <button id="b_adUser" class="ad_btn w3-button w3-block w3-col m2 
+            <button id="b_adAdmin" class="ad_btn w3-button w3-block w3-col m2 
+                                        w3-medium w3-ripple w3-small w3-border" 
+                    onclick="ad_admin()" value="Submit">GTN
+            </button>
+                        <button id="b_adUser" class="ad_btn w3-button w3-block w3-col m2 
                                         w3-medium w3-ripple w3-small w3-border"
                     onclick="ad_user()" value="Submit">users
             </button>
