--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 <body>
   <div id="admin"></div>
  <h1> Welcome to Mr Britton's game site</h1>
+ <div id="intro">This is a demo of what your Y13 project should do. It has:
+  <ul>
+    <li>Game menu</li>
+    <li>Registration (with validation)</li>
+    <li>Single player game (Y12 project)</li>
+    <li>Multi player, turn based game</li>
+    <li>Admin page</li>
+    <li>Sorted High Scores</li>
+    <li>Landing page</li>
+    <li>Landing page</li>
+  </ul>
+ </div>
+
 Testing commit speed<br>
 second commit test edit.<br>
 And another, testing auto commits<br>
