--- a/admin.html
+++ b/admin.html
@@ -39,6 +39,7 @@
     <!--***********************************************************
     		ADMIN PAGE 
     ************************************************************-->
+    <p>This page has been disabled, you can view all the data but you cannot edit it</p>
     <header class="header-container">
         <img id='img_photoURL' 
              src='https://codehs.com/uploads/254781fed739abb37ddaa19b00d30620' 
