--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
 <body>
   <div id="admin"></div>
  <h1> Welcome to Mr Britton's game site</h1>
- <div id="intro">This is a demo of what your Y13 project should do. It has:
+ <div id="intro">This is a functional demo of what your Y13 project should do. It has:
   <ul>
     <li>Game menu</li>
     <li>Registration (with validation)</li>
     <li>Single player game (Y12 project)</li>
-    <li>Multi player, turn based game</li>
+    <li>Multi player, turn based, game</li>
     <li>Admin page</li>
-    <li>Sorted High Scores</li>
-    <li>Landing page</li>
-    <li>Landing page</li>
+    <li>Sorted high scores lists</li>
   </ul>
+The styling for this site is minimal, you are expected to have better presentation for your project.
  </div>
 
 Testing commit speed<br>
