--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div id="admin"></div>
  <h1> Welcome to Mr Britton's game site</h1>
- <div id="intro">This is a functional demo of what your Y13 project should do. It has:
+ <div id="intro"  style="background-color: rgb(249, 158, 158);">This is a functional demo of what your Y13 project should do. It has:
   <ul>
     <li>Game menu</li>
     <li>Registration (with validation)</li>
@@ -85,6 +85,7 @@ Checking to see if you are registered...
 Secret buttons, testing only<br>
 <button onClick="index_makeMeAdmin()">Make me admin</button>
 <button onClick="index_removeAdmin()">Make me not admin</button>
+<button onClick="index_unregister()">unregister</button>
 
 
 </body>
