--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <!-- ------------------------------------------------------------------------
+
+Welcome to the back-end of the Year13 demo project.
+The code here is functional 
+
+ ------------------------------------------------------------------------ -->
 
 <head>
   <meta charset="utf-8">
