--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <!-- ------------------------------------------------------------------------
 
 Welcome to the back-end of the Year13 demo project.
-The code here is functional 
 
- ------------------------------------------------------------------------ -->
+The html and js code is not intended to be used as a model answer.
+There are parts that will not be up to the standard required for the Y13 project.
+
+
+This site has been provided so that you have an example of the functionality you need to create.
+
+------------------------------------------------------------------------ -->
 
 <head>
   <meta charset="utf-8">
