--- a/GTN.html
+++ b/GTN.html
@@ -1,10 +1,94 @@
 <!DOCTYPE html>
 <html>
+  <!-- ------------------------------------------------------------------------
+
+Welcome to the back-end of the Year13 demo project.
+
+This site has been provided so that you have an example of the functionality you need to create.
+
+The html and js code is not intended to be used as a model answer.
+There are parts that will not be up to the standard required for the Y13 project.
+You may not copy any part of this code for use in your project.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+------------------------------------------------------------------------ -->
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>13COMP Guess the number game test</title>
+  <title>Mr Britton's Guess the number game</title>
 
   <!-- firebase start ****************************************-->
   <!-- Firebase App (core Firebase SDK) is always required & must be listed 1st -->
