--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>mr Bob's Games</title>
+      <!-- ------------------------------------------------------------------------
+
+Welcome to the back-end of the Year13 demo project.
+
+This site has been provided so that you have an example of the functionality you need to create.
+
+The html and js code is not intended to be used as a model answer.
+There are parts that will not be up to the standard required for the Y13 project.
+You may not copy any part of this code for use in your project.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+------------------------------------------------------------------------ -->
+
+    <title>mr Britton's Games</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/images/dtec_favicon.PNG">
