--- a/GeoDash.html
+++ b/GeoDash.html
@@ -1,6 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- ------------------------------------------------------------------------
+
+Welcome to the back-end of the Year13 demo project.
+
+This site has been provided so that you have an example of the functionality you need to create.
+
+The html and js code is not intended to be used as a model answer.
+There are parts that will not be up to the standard required for the Y13 project.
+You may not copy any part of this code for use in your project.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+------------------------------------------------------------------------ -->
+
   <title>GeoDash</title>
   <meta charset="UTF-8">
   <meta name="description" content="12COMP P5.play">
