--- a/GeoDash/GeoDash.html
+++ b/GeoDash/GeoDash.html
@@ -111,7 +111,7 @@ You may not copy any part of this code for use in your project.
   BODY
 ****************************************************-->
 <body>
-    <script src="fb_setup.js"></script>
+    <script src="../fb_setup.js"></script>
     <script src="GeoDash.js"></script>
 </body>
 </html>
