--- a/signUp.html
+++ b/signUp.html
@@ -99,6 +99,10 @@ You may not copy any part of this code for use in your project.
   <!-- firebase end ******************************************-->
   <script src="fb_setup.js"></script> 
   <script src="signup.js"></script>
+  <!--
+  https://www.addysolutions.com/services/simple-address-validation
+-->
+<script src="https://www.addysolutions.com/address-lookup/1.6.3/js/addy.min.js?nzKey=ff8e6d2210b54811836a7edb45a08834&country=nz&loadcss=true" async defer></script>
 
 </head>
 
@@ -121,6 +125,15 @@ Please fill in this form and we'll get you started!
     <option value="no">no</option>
     <option value="maybe">maybe</option>
 </select>
+<br>
+<p>
+    Address:
+</p>
+<input type="text" id="street" placeholder="Street address" class="addy-line1"><br>
+<input type="text" id="suburb" placeholder="Suburb" class="addy-suburb"><br>
+<input type="text" id="city" placeholder="City/Town" class="addy-city"><br>
+<input type="text" id="postcode" placeholder="Postcode" class="addy-postcode><br>
+<input type="text" id="country" placeholder="Country" class="addy-country"><br>
 <br>
 <button onClick="signup_register()">Register!</button>
 
