--- a/signUp.html
+++ b/signUp.html
@@ -132,7 +132,7 @@ Please fill in this form and we'll get you started!
 <input type="text" id="street" placeholder="Street address" class="addy-line1"><br>
 <input type="text" id="suburb" placeholder="Suburb" class="addy-suburb"><br>
 <input type="text" id="city" placeholder="City/Town" class="addy-city"><br>
-<input type="text" id="postcode" placeholder="Postcode" class="addy-postcode><br>
+<input type="text" id="postcode" placeholder="Postcode" class="addy-postcode"><br>
 <input type="text" id="country" placeholder="Country" class="addy-country"><br>
 <br>
 <button onClick="signup_register()">Register!</button>
